<resources>
    <string name="app_name">comp3717_project</string>
    <string name="view_my_calendar">Add and View my Events</string>
    <string name="view_events">View Friends Events</string>
    <string name="account_settings">Account Settings</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="faqs">FAQs</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="back_to_home">Back to Home</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_description">Add description:</string>
    <string name="text_add_cal_description_input">description</string>
    <string name="enter_time_and_date">Enter Time and Date:</string>
    <string name="home_balloon">home balloon</string>
    <string name="home_plant">home plant</string>
    <string name="reset_unlock">reset unlock</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email_for_reset">Enter Email for reset</string>
    <string name="edit_now">Edit now!</string>
    <string name="delete">Delete</string>
    <string name="modify_bush">modify_bush</string>
    <string name="all_my_events">All my events:</string>
    <string name="back">back</string>
    <string name="event_name">Event name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="share_to_friends">Share to Friends</string>
    <string name="add_event">Add Event</string>
    <string name="register_now">Register now!</string>
    <string name="peepeeboo">PeePeeBoo</string>
    <string name="prom_msg_here">Stay connected!</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email">Email</string>
    <string name="main_img">main img</string>
    <string name="all_my_friends">-= All my friends =-</string>
    <string name="add_friends">Add Friends</string>
    <string name="art_frineds">art frineds</string>
    <string name="name">name</string>
    <string name="shared_to_friends">Shared to Friends</string>
    <string name="user_name">user name</string>
    <string name="id">id</string>
    <string name="available_friends">Available Friends</string>
    <string name="addfriends_img">addFriends_img</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="auth_background">auth_background</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="update_email">Update Email</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="emailart">emailArt</string>
    <string name="acountpic">acountPic</string>
    <string name="registerart">registerArt</string>
    <string name="all_friends_events">All Friends\' events:</string>

</resources>