<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/addFriends_textView_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/id" />

    <TextView
        android:id="@+id/addFriends_textView_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addFriends_textView_email"
            android:layout_width="259dp"
            android:layout_height="34dp"
            android:layout_weight="2"
            android:text="@string/user_name" />

        <Button
            android:id="@+id/addFriends_button_add"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/custom_button_1"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>