<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout_home_btn"
        android:layout_width="310dp"
        android:layout_height="262dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41">

        <Button
            android:id="@+id/home_button_addViewMyEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_my_calendar"
            android:textAlignment="center" />

        <Button
            android:id="@+id/home_button_view_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_events" />

        <Button
            android:id="@+id/home_button_acc_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_settings" />

        <Button
            android:id="@+id/home_button_manage_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_contacts" />

    </LinearLayout>

    <Button
        android:id="@+id/home_button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_home_btn"
        app:layout_constraintVertical_bias="0.575" />

    <LinearLayout
        android:id="@+id/linearLayout_home_msg"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_home_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/home_tv_welcome"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/home_tv_username"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/username"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/home_imageView_balloon"
        android:layout_width="191dp"
        android:layout_height="280dp"
        android:layout_marginEnd="308dp"
        android:contentDescription="@string/home_balloon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/art_balloon" />

    <ImageView
        android:id="@+id/home_imageView_plant"
        android:layout_width="297dp"
        android:layout_height="317dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/home_plant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/art_plant" />

</androidx.constraintlayout.widget.ConstraintLayout>