<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_logo"
        android:layout_width="306dp"
        android:layout_height="89dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/peepeeboo"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="#6BA0C8"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_tv_prom_msg"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/prom_msg_here"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_logo" />

    <EditText
        android:id="@+id/main_editText_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_editText_email"
        android:importantForAutofill="no" />

    <Button
        app:backgroundTint="@null"
        android:id="@+id/main_btn_login"
        android:layout_width="275dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button_3"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_editText_Password" />

    <ImageView
        android:id="@+id/main_imageView_img"
        android:layout_width="359dp"
        android:layout_height="187dp"
        android:contentDescription="@string/main_img"
        app:layout_constraintBottom_toTopOf="@+id/main_editText_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_prom_msg"
        app:srcCompat="@drawable/art_login_page" />

    <TextView
        android:id="@+id/main_forget_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_login"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/main_editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_prom_msg" />

    <TextView
        android:id="@+id/main_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/register_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toEndOf="@+id/main_forget_pw"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_login"
        app:layout_constraintVertical_bias="0.059" />

</androidx.constraintlayout.widget.ConstraintLayout>