<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettings">


    <LinearLayout
        android:id="@+id/linearLayout_home_msg"
        android:layout_width="342dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/auth_imageView_acountPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/home_tv_welcome"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/home_tv_username"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/username"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/home_button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@drawable/custom_button_2"
        android:text="@string/log_out"
        android:textColor="#97A7BE"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/account_settings_pwd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/custom_button_1"
        android:text="@string/change_password"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/account_settings_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/account_settings_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:background="@drawable/custom_button_1"
        android:text="@string/change_email"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/home_button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/auth_imageView_acountPic"
        android:layout_width="297dp"
        android:layout_height="174dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/acountpic"
        app:layout_constraintBottom_toTopOf="@+id/account_settings_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/art_account" />

</androidx.constraintlayout.widget.ConstraintLayout>